Test/exports/OpenImport.dfy.expect
OpenImport.dfy(25,22): Error: Raised while checking export set Body: Type or type parameter is not declared in this scope: T (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
OpenImport.dfy(26,22): Error: Raised while checking export set Body: Type or type parameter is not declared in this scope: A (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
OpenImport.dfy(24,9): Error: This export set is not consistent: Body
OpenImport.dfy(33,32): Error: unresolved identifier: f
OpenImport.dfy(35,28): Error: unresolved identifier: f
5 resolution/type errors detected in OpenImport.dfy
